# project-manager

./: .gitignore  AGENTS.md  BLOG.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  uno.config.ts  vite.config.ts
.claude/: settings.local.json
.claude/plans/: project-control.md
.github/workflows/: release.yml
dist-ztools/: index.html
scripts/: bump-version-only.cjs  bump-version.cjs  post-build-ztools.cjs  publish-ztools.cjs
src/: App.vue  QuickSearchWindow.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  lib.rs  project.rs  runner.rs  system.rs  updater.rs
tests/: aiCommitMessageTarget.test.ts  backgroundImage.test.ts  codeModuleScanner.test.ts  commitCalendar.test.ts  dashboardActionButtons.test.ts  dashboardWorkspaceProfiles.test.ts  dialogBackdrop.test.ts  dragPosition.test.ts  editorDetection.test.ts  filterPathEntries.test.ts  frontendEnvSwitcher.test.ts  gitBranchModel.test.ts  gitRootDetection.test.ts  importProjectTree.test.ts  importWorkflowConsistency.test.ts  nodeDefaultState.test.ts  pageHeaderConsistency.test.ts  pmResolver.test.ts  projectGroupManagerLayout.test.ts  projectId.test.ts  projectListItemIndicators.test.ts  projectTags.test.ts  projectWorkspaceNavigation.test.ts  shortcut.test.ts  subProjectListLayout.test.ts  updateReleaseAsset.test.ts  workspaceStyleAndCapabilities.test.ts
utools/: plugin.json  preload.js
ztools/: build-plugin.sh  plugin.json  preload.js
(+85 files in other folders)
